--- a/frontend/src/components/SourcePage.css
+++ b/frontend/src/components/SourcePage.css
@@ -10,13 +10,13 @@
 }
 
 .source-page .lines {
-  font-family: 'Open Gurbani Akhar Bold';
-  font-size: 1.325em;
-  padding: 8.333%;
+  padding: 1em;
   text-align: justify;
 }
 
 .source-page .lines .line {
+  font-family: 'Open Gurbani Akhar Bold';
+  font-size: 1.325em;
   line-height: 1.756em;
   transition: 0.125s all ease-in-out;
   padding: 0.18em 0.238em;
@@ -51,7 +51,7 @@
 
 .source-page .controls .button {
   color: #BA3F6A;
-  font-size: 3.082em;
+  font-size: 2.326em;
   transition: 0.125s all ease-in-out;
   padding: 0 0.5em;
 }
